[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opencode-agent"
version = "0.1.0"
description = "Multi-provider AI agent CLI with OpenAI-compatible backends"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=0.21.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "httpx>=0.24.0",
    "pyte>=0.8.0",
    "pytest>=7.4.0",
]

[project.scripts]
agent     = "cli.main:main"
llm-agent = "agent_cli:main"

[tool.setuptools]
py-modules = ["agent_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "cli*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
